fix(team): tekst og prinsipper for team

--- a/team/index.html
+++ b/team/index.html
@@ -42,9 +42,7 @@
                 kompetanse må samarbeide optimalt for å skape verdi for
                 politiet.
               </p>
-              <h2 style="margin-bottom: 0.25rem">
-                Retning for Team treffer på PITs ambisjon:
-              </h2>
+              <h2 style="margin-bottom: 0.25rem">Hvorfor</h2>
               <ul>
                 <li>
                   Vi er teknologer med hjerte for politiets samfunnsoppdrag.
@@ -65,29 +63,43 @@
             <tr-prinsipp>
               <tr-prinsipp-bilde>
                 <img
-                  src="/images/organisasjon.svg"
-                  alt="Tre personer omringet av en sirkel"
+                  src="/images/feedback.svg"
+                  alt="To personer med snakkebobler med horisontale piler"
                 />
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
-                <h3 style="margin-bottom: 1rem">Vi jobber tverrfaglig</h3>
+                <h3 style="margin-bottom: 1rem">Vi forstår brukernes behov</h3>
                 <p style="margin-bottom: 1rem">
-                  Vi vet hva som skal til for at alle kan dele meninger, ideer
-                  og tanker uten frykt for å uten frykt for negative
-                  konsekvenser for sin egen stilling eller omdømme. Trygghet
-                  skaper grobunn for kreativitet, innovasjon, læring og
-                  kontinuerlig forbedring.
+                  Vi har førstehåndskunnskap om brukerne våre og deres
+                  problemer. De beste ideene oppstår i skjæringspunktet mellom
+                  brukernes problemer og kjennskap til mulighetene som ligger i
+                  teknologi og data.
                 </p>
                 <tr-accordion-content id="accordion-1">
-                  <p style="margin-bottom: 1rem">
-                    Her er noe kul informasjon Her er noe kul informasjon Her er
-                    noe kul informasjon Her er noe kul informasjon Her er noe
-                    kul informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon
-                  </p>
+                  <h4>Det betyr at:</h4>
+                  <ul style="margin-bottom: 1rem">
+                    <li>
+                      Alle i teamet har direkte kontakt med brukere, og jobber
+                      over tid med å forstå deres behov.
+                    </li>
+                    <li>Teamet er opptatt av brukerens problemer.</li>
+                    <li>
+                      Teamet prioriterer innsiktsaktiviteter i det daglige
+                      arbeidet, og skaffer seg tilgang til data og målinger.
+                    </li>
+                    <li>
+                      Teamet bruker innsikt om brukerne til å ta gode
+                      beslutninger for produktet, og balanserer det med andre
+                      behov virksomheten har på kort og lang sikt.
+                    </li>
+                    <li>
+                      Teamet forstår at innsiktsarbeid er hele teamets ansvar.
+                    </li>
+                    <li>
+                      Teamet har et aktivt forhold til retning for
+                      brukeropplevelser
+                    </li>
+                  </ul>
                 </tr-accordion-content>
                 <p>
                   <tr-accordion-button
@@ -99,27 +111,39 @@
 
             <tr-prinsipp>
               <tr-prinsipp-bilde>
-                <img src="/images/analyse_mikroskop.svg" alt="Mikroskop" />
+                <img
+                  src="/images/jobber-tverrfaglig.svg"
+                  alt="Tre personer og en snakkeboble over dem"
+                />
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
-                <h3 style="margin-bottom: 1rem">Vi lærer og eksperimenterer</h3>
+                <h3 style="margin-bottom: 1rem">Vi jobber tverrfaglig</h3>
                 <p style="margin-bottom: 1rem">
-                  Vi vet hva som skal til for at alle kan dele meninger, ideer
-                  og tanker uten frykt for å uten frykt for negative
-                  konsekvenser for sin egen stilling eller omdømme. Trygghet
-                  skaper grobunn for kreativitet, innovasjon, læring og
-                  kontinuerlig forbedring.
+                  Vi har folk med ulik kompetanse, fra ulike fagområder i
+                  teamet, slik at vi er i stand til å løse oppdraget. Vi lærer
+                  sammen over tid, og forstår at vi er en del av en større
+                  helhet.
                 </p>
                 <tr-accordion-content id="accordion-2">
-                  <p style="margin-bottom: 1rem">
-                    Her er noe kul informasjon Her er noe kul informasjon Her er
-                    noe kul informasjon Her er noe kul informasjon Her er noe
-                    kul informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon
-                  </p>
+                  <h4>Det betyr at:</h4>
+                  <ul style="margin-bottom: 1rem">
+                    <li>
+                      Vi samarbeider tett underveis i arbeidet, og unngår
+                      overleveringer mellom ulike fagområder
+                    </li>
+                    <li>
+                      Vi har respekt og forståelse for hverandres kompetanse, og
+                      gir og får tilbakemeldinger i arbeidet.
+                    </li>
+                    <li>
+                      Vi har god oversikt og samarbeider tett med våre
+                      interessenter, og er nysgjerrige på omgivelsene våre.
+                    </li>
+                    <li>
+                      Vi inviterer til samarbeid med andre team og andre deler
+                      av virksomheten, og deler mål, innsikt og resultater.
+                    </li>
+                  </ul>
                 </tr-accordion-content>
                 <p>
                   <tr-accordion-button
@@ -132,12 +156,12 @@
             <tr-prinsipp>
               <tr-prinsipp-bilde>
                 <img
-                  src="/images/organisasjon.svg"
-                  alt="Tre personer omringet av en sirkel"
+                  src="/images/trygg-team.svg"
+                  alt="To personer med et stort hjerte i midten. De står i mellom to åpne hender"
                 />
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
-                <h3 style="margin-bottom: 1rem">Vi jobber tverrfaglig</h3>
+                <h3 style="margin-bottom: 1rem">Vi er trygge i teamet</h3>
                 <p style="margin-bottom: 1rem">
                   Vi vet hva som skal til for at alle kan dele meninger, ideer
                   og tanker uten frykt for å uten frykt for negative
@@ -146,15 +170,32 @@
                   kontinuerlig forbedring.
                 </p>
                 <tr-accordion-content id="accordion-3">
-                  <p style="margin-bottom: 1rem">
-                    Her er noe kul informasjon Her er noe kul informasjon Her er
-                    noe kul informasjon Her er noe kul informasjon Her er noe
-                    kul informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon
-                  </p>
+                  <h4>Det betyr at:</h4>
+                  <ul style="margin-bottom: 1rem">
+                    <li>
+                      Teamet jobber sammen over tid, og bygger trygge relasjoner
+                      til hverandre.
+                    </li>
+                    <li>
+                      Teamet jobber kontinuerlig med en god feedback-kultur.
+                    </li>
+                    <li>
+                      De kjenner til god praksis for å etablere et nytt team, og
+                      tar i mot nye teammedlemmer på en god måte.
+                    </li>
+                    <li>
+                      Teamet gjør jevnlige evalueringer og målinger av sin
+                      teamhelse, og lager tiltak når problemer oppstår.
+                    </li>
+                    <li>
+                      De er opptatt av å skape en kultur der det er lov å gjøre
+                      feil, så lenge man lærer av de.
+                    </li>
+                    <li>
+                      Teamet feirer når de når sine mål, og tar felles ansvar
+                      når mål ikke nås
+                    </li>
+                  </ul>
                 </tr-accordion-content>
                 <p>
                   <tr-accordion-button
@@ -167,29 +208,49 @@
             <tr-prinsipp>
               <tr-prinsipp-bilde>
                 <img
-                  src="/images/organisasjon.svg"
-                  alt="Tre personer omringet av en sirkel"
+                  src="/images/person-noder.svg"
+                  alt="En person-sirkel tilknyttet tre noder"
                 />
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
-                <h3>Vi jobber tverrfaglig</h3>
+                <h3 style="margin-bottom: 1rem">Vi skaper fart og flyt</h3>
                 <p style="margin-bottom: 1rem">
-                  Vi vet hva som skal til for at alle kan dele meninger, ideer
-                  og tanker uten frykt for å uten frykt for negative
-                  konsekvenser for sin egen stilling eller omdømme. Trygghet
-                  skaper grobunn for kreativitet, innovasjon, læring og
-                  kontinuerlig forbedring.
+                  Vi balanserer behovet for å lære raskt med behovet for fart og
+                  flyt og fleksibilitet på lengre sikt.
                 </p>
                 <tr-accordion-content id="accordion-4">
-                  <p style="margin-bottom: 1rem">
-                    Her er noe kul informasjon Her er noe kul informasjon Her er
-                    noe kul informasjon Her er noe kul informasjon Her er noe
-                    kul informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon
-                  </p>
+                  <h4>Det betyr at:</h4>
+                  <ul style="margin-bottom: 1rem">
+                    <li>
+                      Teamet reduserer risiko ved å produksjonsette små deler
+                      ofte.
+                    </li>
+                    <li>
+                      Vi jobber smart og effektivt og automatiserer manuelle
+                      oppgaver.
+                    </li>
+                    <li>
+                      Alle i teamet tar ansvar for å sikre god balanse mellom
+                      nyutvikling og opprettholdelse av produktverdi.
+                    </li>
+                    <li>
+                      Teamet tar avgjørelser, dokumenterer og er opptatt av
+                      raske avklaringer.
+                    </li>
+                    <li>
+                      Teamet har rutiner og verktøy for å overvåke
+                      produksjonsmiljøet, og har rutiner for feilsituasjoner.
+                    </li>
+                    <li>
+                      Teamet jobber kontinuerlig med å sikre kvalitet i koden og
+                      har metoder for å sikre at kompetansen er fordelt på flere
+                      i teamet.
+                    </li>
+                    <li>
+                      Teamet har et aktivt forhold til Retning for teknologi og
+                      teknologivalgene politiet har
+                    </li>
+                  </ul>
                 </tr-accordion-content>
                 <p>
                   <tr-accordion-button
@@ -202,29 +263,38 @@
             <tr-prinsipp>
               <tr-prinsipp-bilde>
                 <img
-                  src="/images/organisasjon.svg"
-                  alt="Tre personer omringet av en sirkel"
+                  src="/images/analyse-gjenbruk.svg"
+                  alt="Et gjenbrukssymbol over en graf"
                 />
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
-                <h3 style="margin-bottom: 1rem">Vi jobber tverrfaglig</h3>
+                <h3 style="margin-bottom: 1rem">Vi eksperimenterer og lærer</h3>
                 <p style="margin-bottom: 1rem">
-                  Vi vet hva som skal til for at alle kan dele meninger, ideer
-                  og tanker uten frykt for å uten frykt for negative
-                  konsekvenser for sin egen stilling eller omdømme. Trygghet
-                  skaper grobunn for kreativitet, innovasjon, læring og
-                  kontinuerlig forbedring.
+                  Vi er åpne for nye ideer og muligheter, og har en kultur som
+                  fremmer kreativitet og innovasjon. Det øker sjansene for å
+                  skape verdifulle produkter til våre brukere, samtidig som det
+                  tar ned risikoen for å bygge feil ting.
                 </p>
                 <tr-accordion-content id="accordion-5">
-                  <p style="margin-bottom: 1rem">
-                    Her er noe kul informasjon Her er noe kul informasjon Her er
-                    noe kul informasjon Her er noe kul informasjon Her er noe
-                    kul informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon
-                  </p>
+                  <h4>Det betyr at:</h4>
+                  <ul style="margin-bottom: 1rem">
+                    <li>
+                      Teamet har kultur for utforskning og eksperimentering, som
+                      måter å både teste ut ideer på, samt håndtere risiko.
+                    </li>
+                    <li>
+                      Teamet tør å ta sjanser, måler effekt, og gjennomfører
+                      trygge evalueringer.
+                    </li>
+                    <li>
+                      Teamet tester ut ulike hypoteser som kan føre til
+                      måloppnåelse.
+                    </li>
+                    <li>
+                      teamet har høy bevissthet til å håndtere risikoene og ta
+                      dem ned raskt.
+                    </li>
+                  </ul>
                 </tr-accordion-content>
                 <p>
                   <tr-accordion-button
@@ -237,29 +307,38 @@
             <tr-prinsipp>
               <tr-prinsipp-bilde>
                 <img
-                  src="/images/organisasjon.svg"
-                  alt="Tre personer omringet av en sirkel"
+                  src="/images/person-blink.svg"
+                  alt="En person foran en blink med en pil i midten (bullseye)"
                 />
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
-                <h3 style="margin-bottom: 1rem">Vi jobber tverrfaglig</h3>
+                <h3 style="margin-bottom: 1rem">Vi jobber etter mål</h3>
                 <p style="margin-bottom: 1rem">
-                  Vi vet hva som skal til for at alle kan dele meninger, ideer
-                  og tanker uten frykt for å uten frykt for negative
-                  konsekvenser for sin egen stilling eller omdømme. Trygghet
-                  skaper grobunn for kreativitet, innovasjon, læring og
-                  kontinuerlig forbedring.
+                  Vi er åpne for nye ideer og muligheter, og har en kultur som
+                  fremmer kreativitet og innovasjon. Det øker sjansene for å
+                  skape verdifulle produkter til våre brukere, samtidig som det
+                  tar ned risikoen for å bygge feil ting.
                 </p>
                 <tr-accordion-content id="accordion-6">
-                  <p style="margin-bottom: 1rem">
-                    Her er noe kul informasjon Her er noe kul informasjon Her er
-                    noe kul informasjon Her er noe kul informasjon Her er noe
-                    kul informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon Her er noe kul informasjon Her er noe kul
-                    informasjon
-                  </p>
+                  <h4>Det betyr at:</h4>
+                  <ul style="margin-bottom: 1rem">
+                    <li>
+                      Teamet har kultur for utforskning og eksperimentering, som
+                      måter å både teste ut ideer på, samt håndtere risiko.
+                    </li>
+                    <li>
+                      Teamet tør å ta sjanser, måler effekt, og gjennomfører
+                      trygge evalueringer.
+                    </li>
+                    <li>
+                      Teamet tester ut ulike hypoteser som kan føre til
+                      måloppnåelse.
+                    </li>
+                    <li>
+                      Teamet har høy bevissthet til å håndtere risikoene og ta
+                      dem ned raskt.
+                    </li>
+                  </ul>
                 </tr-accordion-content>
                 <p>
                   <tr-accordion-button
