fix: verktøykasser fra Miro for alle retninger

--- a/brukeropplevelse/index.html
+++ b/brukeropplevelse/index.html
@@ -218,7 +218,23 @@
     <tr-verktoykasse>
       <tr-verktoykasse-content>
         <tr-verktoykasse-header></tr-verktoykasse-header>
-        <tr-verktoykasse-body></tr-verktoykasse-body>
+        <tr-verktoykasse-body>
+          <p style="margin-bottom: 1rem">
+            For å ivareta brukeropplevelsen er det naturlig å ta i bruk mye av
+            det som ligger i verktøykassen til en designer. Det finnes også
+            mange gode beskrivelser og metoder både i Miro og andre steder på
+            nett. Vær nysgjerrig, test ut nye verktøy og del med andre.
+          </p>
+          <ul>
+            <li>
+              <a
+                href="https://www.politiet.no/sheriff/?path=/docs/sheriff--docs"
+                target="_blank"
+                >Politiets Designsystemet Sheriff</a
+              >
+            </li>
+          </ul>
+        </tr-verktoykasse-body>
       </tr-verktoykasse-content>
     </tr-verktoykasse>
     <tr-footer></tr-footer>
