--- a/team/index.html
+++ b/team/index.html
@@ -354,7 +354,29 @@
     <tr-verktoykasse>
       <tr-verktoykasse-content>
         <tr-verktoykasse-header></tr-verktoykasse-header>
-        <tr-verktoykasse-body></tr-verktoykasse-body>
+        <tr-verktoykasse-body>
+          <ul style="margin-bottom: 1rem">
+            <li>Value proposition canvas</li>
+            <li>Brukerintervju</li>
+            <li>Brukerobserveringer</li>
+            <li>Målinger som gir innsikt (kvalitative og kvantitative)</li>
+            <li>Design sprint</li>
+            <li>
+              Div inspirasjoner til brukerinnsikt og samhandling (bøler,
+              podcasts mm)
+            </li>
+            <li>Tolkning eller observasjon</li>
+            <li>Spill om åpne og lukkede spørsmål</li>
+            <li>Kurs i brukerinnsikt</li>
+          </ul>
+          <h2>Lær mer om brukernes behov:</h2>
+          <ul>
+            <li>
+              <a href="/brukeropplevelse">Retning for brukeropplevelse</a>
+            </li>
+            <li><a href="">Hvordan gjøre brukerintervjuer</a></li>
+          </ul>
+        </tr-verktoykasse-body>
       </tr-verktoykasse-content>
     </tr-verktoykasse>
     <tr-footer></tr-footer>
