--- a/teknologi/index.html
+++ b/teknologi/index.html
@@ -478,7 +478,14 @@
     <tr-verktoykasse>
       <tr-verktoykasse-content>
         <tr-verktoykasse-header></tr-verktoykasse-header>
-        <tr-verktoykasse-body></tr-verktoykasse-body>
+        <tr-verktoykasse-body>
+          <ul>
+            <li>Teknologiradar</li>
+            <li>Tekniske standarder (RFC)</li>
+            <li>Teambeslutninger (ADR)</li>
+            <li>Tech Community & Tech Open Space</li>
+          </ul>
+        </tr-verktoykasse-body>
       </tr-verktoykasse-content>
     </tr-verktoykasse>
     <tr-footer></tr-footer>
