--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
 
     <link href="/css/common.css" rel="stylesheet" />
+    <script type="module" src="/components/header.js"></script>
     <script type="module" src="/components/common.js"></script>
 
     <style>
@@ -134,28 +135,7 @@
     </style>
   </head>
   <body>
-    <header style="display: grid; gap: 1.5rem; padding: 2rem">
-      <div
-        style="
-          display: flex;
-          gap: 2rem;
-          flex-wrap: wrap;
-          justify-content: space-between;
-          align-items: center;
-        "
-      >
-        <h1 style="text-transform: uppercase; color: #00263e">Retninger</h1>
-        <img
-          src="/images/politiet_logo.jpg"
-          alt="Politiets logo"
-          style="height: 2.5rem; width: auto"
-        />
-      </div>
-      <p style="font-size: 20px">
-        Retningene i PIT skal sikre at vi lager gode og trygge tjenester som
-        bidrar til å løse samfunnsoppdraget
-      </p>
-    </header>
+    <tr-header></tr-header>
     <main
       style="
         padding: 2rem;
