fix(forside): små endringer

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <li>forstår brukerens behov</li>
             <li>jobber tverrfaglig</li>
             <li>skaper fart og flyt</li>
-            <li>lærer og eksperimenterer</li>
+            <li>eksperimenterer og lærer</li>
             <li>jobber etter mål</li>
           </ul>
         </div>
@@ -264,18 +264,17 @@
       >
         <tr-box style="display: grid; gap: 2rem; padding-bottom: 10rem">
           <p>
-            Du og jeg er <strong><a href="/folk">FOLK</a></strong> i PIT. Sammen
-            skal vi
+            Du og jeg er <strong><a href="/folk">FOLK</a></strong> i PIT.
           </p>
           <div style="display: flex; flex-wrap: wrap; gap: 3rem">
             <div>
               <ul>
+                <li>vi eier helheten sammen</li>
                 <li>lære og utvikle oss</li>
                 <li>samarbeide på tvers av fagområder</li>
                 <li>gi og få feedback</li>
                 <li>måle for å bli bedre</li>
                 <li>være åpne og transparente</li>
-                <li>eie helheten</li>
                 <li>ville hverandre vel</li>
               </ul>
             </div>
