fix(brukeropplevelse): tekstendringer i header

--- a/brukeropplevelse/index.html
+++ b/brukeropplevelse/index.html
@@ -36,27 +36,21 @@
                   alt="Politimann gjennomfører avhør med en mann. Begge trykker på en mobiltelefon"
                 />
               </tr-retning-header-content-image>
-              <h2 style="margin-bottom: 0.25rem">Hva</h2>
               <p style="margin-bottom: 1rem">
                 Retning for brukeropplevelse skal beskrive opplevelsen vi vil
-                jobbe for å levere - og opplevelsen vi ønsker å love alle
+                jobbe for å levere — og opplevelsen vi ønsker å love alle
                 brukere av politiets produkter og tjenester.
               </p>
               <p style="margin-bottom: 1rem">
                 Brukeropplevelse er hvordan en tjeneste eller et produkt
-                oppleves i helhet. Denne påvirker hvordan politiet oppleves - og
+                oppleves i helhet. Denne påvirker hvordan politiet oppleves — og
                 er viktig for omdømmet og tilliten til politiet.
               </p>
-            </div>
-            <div>
-              <h2 style="margin-bottom: 0.25rem">
-                Hvorfor Politiets samfunnsoppdrag
-              </h2>
               <p style="margin-bottom: 1rem">
-                For å kunne lykkes med oppdraget er vi helt avhengige av tillit,
-                både internt i etaten og i samfunnet forøverig. Denne tilliten
-                skaper vi bla. ved å jobbe med hvordan vi oppleves både digitalt
-                og fysisk.
+                For å kunne lykkes med samfunnsoppdraget vårt er vi helt
+                avhengige av tillit, både internt i etaten og i samfunnet for
+                øvrig. Denne tilliten skaper vi blant annet ved å jobbe med
+                hvordan vi oppleves både digitalt og fysisk.
               </p>
               <p style="margin-bottom: 1rem">
                 For å levere en brukeropplevelse som er i tråd med sånn politiet
