fix(team): tekstendringer

--- a/team/index.html
+++ b/team/index.html
@@ -36,24 +36,19 @@
                   alt="En dame fremviser en presentasjon. En mann med en mobiltelefon og en dame med kaffekopp ser på."
                 />
               </tr-retning-header-content-image>
-              <p style="margin-bottom: 2rem">
+              <p style="margin-bottom: 1rem">
                 Retning for team består av 6 viktige prinsipper. Alle
                 prinsippene har som utgangspunkt i at personer med ulik
                 kompetanse må samarbeide optimalt for å skape verdi for
                 politiet.
               </p>
-              <h2 style="margin-bottom: 0.25rem">Hvorfor</h2>
-              <ul>
-                <li>
-                  Vi er teknologer med hjerte for politiets samfunnsoppdrag.
-                  Nysgjerrighet og tverrfaglighet er vår nøkkel til suksess.
-                </li>
-                <li>
-                  Vi er kompetente og engasjerte medarbeidere, som jobber i
-                  tverrfaglige team uten siloer. Vi tar initiativ,
-                  eksperimenterer og er stolte av kvaliteten i det vi gjør.
-                </li>
-              </ul>
+              <p style="margin-bottom: 1rem">
+                Vi er teknologer med hjerte for politiets samfunnsoppdrag.
+                Nysgjerrighet og tverrfaglighet er vår nøkkel til suksess. Vi er
+                kompetente og engasjerte medarbeidere, som jobber i tverrfaglige
+                team uten siloer. Vi tar initiativ, eksperimenterer og er stolte
+                av kvaliteten i det vi gjør.
+              </p>
             </div>
           </tr-retning-header-content>
         </tr-retning-header>
@@ -97,7 +92,7 @@
                     </li>
                     <li>
                       Teamet har et aktivt forhold til retning for
-                      brukeropplevelser
+                      brukeropplevelser.
                     </li>
                   </ul>
                 </tr-accordion-content>
@@ -129,7 +124,7 @@
                   <ul style="margin-bottom: 1rem">
                     <li>
                       Vi samarbeider tett underveis i arbeidet, og unngår
-                      overleveringer mellom ulike fagområder
+                      overleveringer mellom ulike fagområder.
                     </li>
                     <li>
                       Vi har respekt og forståelse for hverandres kompetanse, og
@@ -193,7 +188,7 @@
                     </li>
                     <li>
                       Teamet feirer når de når sine mål, og tar felles ansvar
-                      når mål ikke nås
+                      når mål ikke nås.
                     </li>
                   </ul>
                 </tr-accordion-content>
@@ -247,8 +242,8 @@
                       i teamet.
                     </li>
                     <li>
-                      Teamet har et aktivt forhold til Retning for teknologi og
-                      teknologivalgene politiet har
+                      Teamet har et aktivt forhold til retning for teknologi og
+                      teknologivalgene politiet har.
                     </li>
                   </ul>
                 </tr-accordion-content>
@@ -291,7 +286,7 @@
                       måloppnåelse.
                     </li>
                     <li>
-                      teamet har høy bevissthet til å håndtere risikoene og ta
+                      Teamet har høy bevissthet til å håndtere risikoene og ta
                       dem ned raskt.
                     </li>
                   </ul>
@@ -314,29 +309,35 @@
               <tr-prinsipp-innhold>
                 <h3 style="margin-bottom: 1rem">Vi jobber etter mål</h3>
                 <p style="margin-bottom: 1rem">
-                  Vi er åpne for nye ideer og muligheter, og har en kultur som
-                  fremmer kreativitet og innovasjon. Det øker sjansene for å
-                  skape verdifulle produkter til våre brukere, samtidig som det
-                  tar ned risikoen for å bygge feil ting.
+                  Vi jobber etter mål, og måles etter verdien vi skaper til
+                  brukerne våre. Målene våre er i tråd med overordnede mål i
+                  området og samfunns-oppdraget. Målene skal hjelpe teamet og
+                  området å prioritere tiltak og utvikling. Tydelige mål som
+                  henger sammen overordnede mål er viktig for motivasjon og
+                  prestasjon, og for at hele virksomheten skal dra i ønsket
+                  retning.
                 </p>
                 <tr-accordion-content id="accordion-6">
                   <h4>Det betyr at:</h4>
                   <ul style="margin-bottom: 1rem">
                     <li>
-                      Teamet har kultur for utforskning og eksperimentering, som
-                      måter å både teste ut ideer på, samt håndtere risiko.
+                      Alle i teamet kjenner eierskap til mål og hensikt, og får
+                      være med å sette preg på de.
                     </li>
                     <li>
-                      Teamet tør å ta sjanser, måler effekt, og gjennomfører
-                      trygge evalueringer.
+                      Teamet deler og justerer egne mål og arbeidet med
+                      måloppnåelse med andre team i området, slik at vi samlet
+                      sett kan skape best mulig verdi til brukerne og
+                      organisasjonen.
+                    </li>
+                    <li>Mål følges opp underveis av teamet og av eiere.</li>
+                    <li>
+                      Mål som fokuserer på ønsket verdi og effekt heller enn
+                      leveranser og løsninger er kjernen i produktutvikling.
                     </li>
                     <li>
-                      Teamet tester ut ulike hypoteser som kan føre til
-                      måloppnåelse.
-                    </li>
-                    <li>
-                      Teamet har høy bevissthet til å håndtere risikoene og ta
-                      dem ned raskt.
+                      Målstyring krever at teamet og området har tilgang til
+                      data og innsikt som forteller om de er på rett vei.
                     </li>
                   </ul>
                 </tr-accordion-content>
@@ -362,8 +363,8 @@
             <li>Målinger som gir innsikt (kvalitative og kvantitative)</li>
             <li>Design sprint</li>
             <li>
-              Div inspirasjoner til brukerinnsikt og samhandling (bøler,
-              podcasts mm)
+              Div inspirasjoner til brukerinnsikt og samhandling (bøker,
+              podkaster med mer)
             </li>
             <li>Tolkning eller observasjon</li>
             <li>Spill om åpne og lukkede spørsmål</li>
