fix(team): fjernet gjentakende ord

--- a/team/index.html
+++ b/team/index.html
@@ -159,10 +159,9 @@
                 <h3 style="margin-bottom: 1rem">Vi er trygge i teamet</h3>
                 <p style="margin-bottom: 1rem">
                   Vi vet hva som skal til for at alle kan dele meninger, ideer
-                  og tanker uten frykt for å uten frykt for negative
-                  konsekvenser for sin egen stilling eller omdømme. Trygghet
-                  skaper grobunn for kreativitet, innovasjon, læring og
-                  kontinuerlig forbedring.
+                  og tanker uten frykt for negative konsekvenser for sin egen
+                  stilling eller omdømme. Trygghet skaper grobunn for
+                  kreativitet, innovasjon, læring og kontinuerlig forbedring.
                 </p>
                 <tr-accordion-content id="accordion-3">
                   <h4>Det betyr at:</h4>
