fix(frontpage): maks bredde (samme som retninger) på forsiden

--- a/brukeropplevelse/index.html
+++ b/brukeropplevelse/index.html
@@ -55,7 +55,7 @@
               <p style="margin-bottom: 1rem">
                 For å levere en brukeropplevelse som er i tråd med sånn politiet
                 ønsker å fremstå, trenger vi noe som veileder oss, og som gjøre
-                det lettere å vite hvilken retning vi skal dra
+                det lettere å vite hvilken retning vi skal dra.
               </p>
             </div>
           </tr-retning-header-content>
